# z-ml-ops-bootcamp

./: .gitignore  main.py  pyproject.toml  requirements.txt
00_krish_bootcamp/: 00-getting-started.ipynb
00_n9_finetuning/: main.ipynb
01_fuzzy_scientist/Ragas/: O01_SingleTurnSample.py
