[project]
name = "z-ml-ops-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bitsandbytes>=0.49.1",
    "datasets>=4.5.0",
    "ipykernel>=7.2.0",
    "mlflow>=3.9.0",
    "peft>=0.18.1",
    "torch>=2.10.0",
    "transformers>=5.1.0",
]
