[project]
name = "z-ml-ops-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bitsandbytes>=0.49.1",
    "cloudpickle>=3.1.2",
    "datasets>=4.5.0",
    "ipykernel>=7.2.0",
    "mlflow>=3.9.0",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "peft>=0.18.1",
    "psutil>=7.2.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "torch>=2.10.0",
    "transformers>=5.1.0",
]
